--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simple spotify API consuming client",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "electron app.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/rodri-dot-git/ElectronJS-Spotify/issues"
   },
-  "homepage": "https://github.com/rodri-dot-git/ElectronJS-Spotify#readme"
+  "homepage": "https://github.com/rodri-dot-git/ElectronJS-Spotify#readme",
+  "dependencies": {
+    "electron": "^5.0.2",
+    "spotify-web-api-node": "^4.0.0"
+  }
 }
