--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "homepage": "https://github.com/rodri-dot-git/ElectronJS-Spotify#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "electron": "^5.0.2",
+    "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "request": "^2.88.0",
     "spotify-web-api-node": "^4.0.0"
   }
 }
