--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "spotify-web-api-node": "^4.0.0"
   }
 }
