--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "plotly": "^1.0.6",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "socket.io-client": "^2.2.0",
     "spotify-web-api-node": "^4.0.0"
   }
 }
